--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "target": "ES6",
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": false,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
