--- a/package.json
+++ b/package.json
@@ -41,14 +41,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-//    "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19",
-//     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
@@ -60,11 +58,10 @@
     "zod": "^3.24.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-//    "leaflet": "latest",
     "fs": "latest",
     "path": "latest",
-    "react-leaflet": "4.2.1",  // Downgrade from 5.0.0
-    "react-day-picker": "8.8.0",  // Downgrade from 8.10.1
+    "react-leaflet": "4.2.1",
+    "react-day-picker": "8.8.0",
     "leaflet": "1.9.4",
     "date-fns": "2.30.0"
   },
