--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,5 +11,10 @@
         "bradlc.vscode-tailwindcss"
       ]
     }
+  },
+  "features": {
+    "node": {
+      "version": "18.18.0"
+    }
   }
 }
